# aoc_2024

./: .gitignore  Cargo.toml  copy_day.sh
common/: Cargo.toml
common/src/: lib.rs
day1/: Cargo.toml
day1/src/: main.rs
day2/: Cargo.toml
day2/src/: main.rs
day3/: Cargo.toml
day3/src/: main.rs
day4/: Cargo.toml
day4/src/: main.rs
day5/: Cargo.toml
day5/src/: main.rs
template/: Cargo.toml
template/src/: main.rs
