[workspace]
members = ["common", "day1"]
resolver = "2"

[workspace.dependencies]
reqwest = "0.12.9"

[workspace.lints.rust]
missing_debug_implementations = "warn"
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
alloc_instead_of_core = "warn"
std_instead_of_core = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
